Sim Sharing: Added messages for all components on the control panel
Sim Sharing: Added messages for flames turning off and on
Sim Sharing: Added messages for rotation/endpoint movement (limit to every 500ms)
Sim Sharing: Added message for: Configured value (battery voltage, resistance) changed (limit to every 500ms)
Sim sharing: Added sim sharing message for changes of current detected by series ammeter.
Sim sharing: Changed the sim sharing message from the voltmeter to say "undfined" instead of "NaN" when it has no value to show.  This is more consistent with what the non-contact ammeter does.
Sim sharing: Added messages from non-contact ammeter for changes to current reading.
Sim sharing: Added messages from non-contact ammeter for connections formed and broken.
Sim Sharing: Added messages for changes to the connection status of the voltmeter leads.
Sim sharing: Added messages for changes to the voltage measured by the voltmeter.
Sim sharing: Added notification message for breaking of connections.
Sim sharing: Added notification message for the formation of connections.
Sim sharing: Added instance identifiers to the circuit elements.
# 3.20.08 (71979) Feb 5, 2013
2/5/13 Deploying to dev for review and discussion of progress on data logging feature.
Sim sharing: Made the check boxes for the voltmeter and the two types of ammeters send up sim sharing notifications.
Sim sharing: Added sim sharing message that indicates when a circuit component (called a 'branch' in the source code) is removed from the play area.
Sim sharing: Added sim sharing message that indicates when a wire segment has been moved by the user.
Sim sharing: Added sim sharing message that indicates when components in the circuit have been moved by the user.
Sim sharing: Added user component IDs for all the basic circuit elements that can be added from the tool box.